--- a/src/app/shared/components/ui/modal/components/modal-alert/modal-alert.component.scss
+++ b/src/app/shared/components/ui/modal/components/modal-alert/modal-alert.component.scss
@@ -18,7 +18,7 @@
       width: 100%;
       min-height: 80px;
 
-      app-icon {
+      av-icon {
         display: flex;
         justify-content: center;
         align-items: center;
